feat: add laboratory work 6; complete 6.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_C_STANDARD 11)
 
 add_subdirectory(laboratory_work_4)
 add_subdirectory(laboratory_work_5)
+add_subdirectory(laboratory_work_6)
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "C Standard: ${CMAKE_C_STANDARD}")
