--- a/laboratory_work_6/CMakeLists.txt
+++ b/laboratory_work_6/CMakeLists.txt
@@ -1,4 +1,3 @@
 add_subdirectory(6.1)
-add_subdirectory(6.2.1)
-add_subdirectory(6.2.2)
-add_subdirectory(6.2.3)
+add_subdirectory(6.2/6.2.1)
+add_subdirectory(6.2/6.2.2)
