--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_C_STANDARD 11)
 add_subdirectory(laboratory_work_4)
 add_subdirectory(laboratory_work_5)
 add_subdirectory(laboratory_work_6)
+add_subdirectory(laboratory_work_7)
 
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "C Standard: ${CMAKE_C_STANDARD}")
